# Specsy

./: CMakeLists.txt  WinRing0Wrapper.h  Wmi.cpp  WmiClient.h  cpuInfo.cpp  cpuInfo.h  main.cpp
